nade/tests/compile_fail/02_default_argument_unhygienic_error.stderr
error[E0433]: failed to resolve: use of undeclared type `Path`
  --> $DIR/02_default_argument_unhygienic_error.rs:7:39
   |
7  |     pub fn bar<P: AsRef<Path>>(#[nade(Path::new(".").canonicalize().unwrap())] p: P) -> PathBuf {
   |                                       ^^^^ use of undeclared type `Path`
...
17 |     assert_eq!(bar!(), env::current_dir().unwrap());
   |                ------ in this macro invocation
   |
   = note: this error originates in the macro `bar` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
   |
12 | use std::path::Path;
   |
